# neuro

./: .gitignore  AUDIO_IMPLEMENTATION.md  AUDIO_QUICK_START.md  AUDIO_UPDATE_SUMMARY.md  AUDIO_USER_GUIDE.md  BUILD_SUCCESS.md  BUILD_SUCCESS_GUI.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_STATUS.md  GUI_IMPLEMENTATION_STATUS.md  INSTALL_QT.md  QT_INTEGRATION_PLAN.md  QUICK_START.md  README.md  ROADMAP.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  UI_DESIGN.md  run_test.sh  test_device.sh  test_settings.sh
include/: AbstractModels.h  AnatomicalAtlas.h  AuraReading.h  BallMovement.h  BellSwing.h  BiocomputerActivation.h  BiocomputerMastery.h  BlindMovement.h  BodyPartVision.h  CapsuleManager.h  ChakraPerception.h  ColoredCellsTable.h  ColoredPicturesTable.h  ColoredTextDrawing.h  CosmicConsciousness.h  CreativeVisualization.h  DarkVision.h  DataEncryption.h  DepthVision.h  DistantHealing.h  EnergeticCocoon.h  EnergyBall.h  EnergyFieldScanning.h  EnergyHandsStage1.h  EnergySeedIntroduction.h  Exercise.h  ExerciseLibrary.h  EyePumping.h  EyeRays.h  FastWind.h  FingerRays.h  FuturePrediction.h  HandColorVision.h  HandSymbolVision.h  HandTextVision.h  HeadPumping.h  HeavenEarth.h  HeavinessLightness.h  HeavyLight.h  HorizontalPumping.h  (+46 more)
qml/: main.qml  qml.qrc
qml/components/: CustomProgressBar.qml  ExerciseCard.qml  LineChart.qml  MetricsPanel.qml  MetricsProgressBar.qml  StageSelector.qml  qmldir
qml/screens/: CalibrationScreen.qml  ExerciseScreen.qml  ExerciseScreen_v2.qml  HomeScreen.qml  HomeScreen_v2.qml  PreparationScreen.qml  ProfileScreen.qml  ResultsScreen.qml  SettingsScreen.qml  StatisticsScreen.qml
qml/styles/: Theme.qml
src/: main.cpp
src/analytics/: ReportGenerator.cpp  TrendAnalyzer.cpp
src/capsule/: CapsuleManager.cpp  MetricsCollector.cpp  SessionManager.cpp
src/database/: SessionDatabase.cpp  SessionStorage.cpp  UserManager.cpp  UserProfile.cpp
src/exercises/: AbstractModels.cpp  AnatomicalAtlas.cpp  AuraReading.cpp  BallMovement.cpp  BellSwing.cpp  BiocomputerActivation.cpp  BiocomputerMastery.cpp  BlindMovement.cpp  BodyPartVision.cpp  ChakraPerception.cpp  ColoredCellsTable.cpp  ColoredPicturesTable.cpp  ColoredTextDrawing.cpp  CosmicConsciousness.cpp  CreativeVisualization.cpp  DarkVision.cpp  DataEncryption.cpp  DepthVision.cpp  DistantHealing.cpp  EnergeticCocoon.cpp  EnergyBall.cpp  EnergyFieldScanning.cpp  EnergyHandsStage1.cpp  EnergySeedIntroduction.cpp  Exercise.cpp  ExerciseLibrary.cpp  EyePumping.cpp  EyeRays.cpp  EyeRays.cpp.bak  FastWind.cpp  FastWind.cpp.bak  FingerRays.cpp  FingerRays.cpp.bak  FuturePrediction.cpp  HandColorVision.cpp  HandSymbolVision.cpp  HandTextVision.cpp  HeadPumping.cpp  HeavenEarth.cpp  HeavenEarth.cpp.bak  (+48 more)
src/feedback/: MetricsAnalyzer.cpp  ProgressTracker.cpp  RealTimeFeedback.cpp
src/gui/: main_gui.cpp
src/gui/controllers/: AudioController.cpp  AudioController.h  DeviceController.cpp  DeviceController.h  ExerciseController.cpp  ExerciseController.h  SettingsController.cpp  SettingsController.h
src/gui/models/: ExerciseModel.cpp  ExerciseModel.h  MetricsModel.cpp  MetricsModel.h  SessionModel.cpp  SessionModel.h
src/session/: ExerciseSession.cpp  GuidedInstructor.cpp  PhaseController.cpp
